Fix index button width on small screen sizes.

--- a/frontend/components/index/Button/index.module.scss
+++ b/frontend/components/index/Button/index.module.scss
@@ -7,7 +7,8 @@
   letter-spacing: -0.02em;
   text-align: center;
   font-weight: 900;
-  width: 22rem;
+  max-width: 22rem;
+  width: 90%;
   transition: transform 0.2s;
   color: white;
 
